--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ readme = "README.md"
 repository = "https://github.com/andrew-johnson-4/ast_topology"
 documentation = "https://docs.rs/ast_topology/"
 keywords = ["differentiable","machine","learning","artificial","intelligience"]
+
+[dependencies]
+autograd = { version = "1.0", features = ["mkl"] }
